made local translations in firebase
made local translations in firebase

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -2,8 +2,9 @@ body{
     position: relative;
     overflow-x: hidden;
 }
-.nav-link{
-    text-transform: uppercase;
+
+.dropdown-item.active, .dropdown-item:active{
+    background-color: inherit;
 }
 @media(max-width:1199px){
     .navbar-brand svg{
