--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -112,10 +112,6 @@ body{
     font-size:1.830vw;
 }
 .acquaintance{
-    /*  background-image: url("./../../../public/img/acquaintance-background.jpeg"); */
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
     padding: 2.196vw;
 }
 
@@ -133,8 +129,12 @@ body{
     height: 100%;
 }
 
+.specialities{
+    margin-top: 20px;
+    padding: 0 0 25px 0;
+}
 .specialities h3{
-    margin-top: 65px;
+    padding-top: 25px;
 }
 .specialities .col{
     margin-top: 40px;
@@ -432,4 +432,35 @@ body{
  display: flex;
  align-items: center;
  justify-content: center;
+}
+.Apply{
+    background-color: #E3F2FD;
+    padding: 30px 0 50px 0;
+}
+.Apply__cards{
+    margin-top: 10px;
+}
+.Apply__card{
+    margin-top: 15px;
+    background-color: white;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    overflow: hidden;
+}
+.Apply__card-title{
+    background-color: #3b5998;
+    padding: 10px;
+}
+.Apply__dates{
+    border-bottom: 1px solid black;
+    padding: 5px 0 10px 0;
+}
+.Apply__card ol{
+    list-style-position: inside;
+    padding-left: 0;
+    padding: 0 5px;
+}
+.Apply__card span{
+    font-weight: bold;
 }
