--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -437,20 +437,32 @@ body{
     background-color: #E3F2FD;
     padding: 30px 0 50px 0;
 }
+@media(max-width:767px){
+    .Apply .col{
+        flex: 1 1 auto;
+        margin-top: 15px;
+    }
+}
 .Apply__cards{
     margin-top: 10px;
 }
 .Apply__card{
-    margin-top: 15px;
+    min-height: 100%;
     background-color: white;
     text-align: center;
     border: 1px solid black;
     border-radius: 10px;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 .Apply__card-title{
     background-color: #3b5998;
-    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px 0;
+    flex: 1;
 }
 .Apply__dates{
     border-bottom: 1px solid black;
