--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -10,6 +10,10 @@ body{
     display: flex;
     flex-direction: column;
 }
+.no-scroll{
+    height: 100vh;
+    overflow: hidden;
+}
 .content{
     flex: 1 1 auto;
 }
